--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://88a3b4ea-3ebc-4eb1-9f37-dce9e6283bdc.preview.emergentagent.com
 WDS_SOCKET_PORT=443
