--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,6 @@ frontend/node_modules/.cache/default-development/2.pack_
 frontend/node_modules/.cache/default-development/3.pack_
 frontend/node_modules/.cache/default-development/3.pack
 frontend/node_modules/.cache/default-development/4.pack
+frontend/public/DATA-CRUDA-STOCKS_clean.csv
+frontend/public/GOLD-DATA.csv
+frontend/public/S&P500-DATA.csv
